--- a/CSS Layouts/index.html
+++ b/CSS Layouts/index.html
@@ -16,7 +16,7 @@
     <!-- M -->
     <div class="container">
       <!-- Header Section -->
-      <header class="main-header">
+      <header class="main-header clear-fix">
         <h1>📘 The Kasmaal Magazine</h1>
 
         <nav>
@@ -25,6 +25,7 @@
           <a href="Text-Elements.html">Texts</a>
           <a href="#html">HTML</a>
         </nav>
+        <!-- <div class="clear"></div> -->
       </header>
 
       <main>
@@ -36,9 +37,10 @@
             alt="Headshot Image"
             width="80"
             title="Headshot Image of the Author"
+            class="author-img"
           />
 
-          <p id="author">
+          <p id="author" class="author">
             Posted by <strong>Mo Haji Abdi</strong> on Monday, June 21st 2027
           </p>
 
