--- a/Responsive/Final/index.html
+++ b/Responsive/Final/index.html
@@ -12,18 +12,6 @@
 </head>
 <body>
     <div class="coffee-container">
-        <nav class="main-nav">
-            <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-            <label for="menu-toggle" class="hamburger-icon">
-              <i class="fas fa-bars fa-lg"></i>
-            </label>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Testimonial</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
         <header>
             <div>
                 
@@ -31,7 +19,7 @@
                 <p class="header-text">From bean to brew, our dedication to quality ensures the perfect cup every time. Sourced from the finest farms, roasted with precision.</p>
                 <a href="#" class="btn btn--big">Shop Coffee</a>
             </div>
-            <img src="hero-2.jpg" alt="Coffee HEro" width="450" class="hero-image">
+            <img src="hero-2.jpg" alt="Coffee HEro" width="450">
             
         </header>
 
